--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,15 @@
 cmake_minimum_required(VERSION 2.6)
 
+file(GLOB all_src
+	"src/*/*.hpp"
+	"src/*/*.cpp"
+)
+
 project(kangaroo)
 set(EXECUTABLE_NAME "kangaroo")
 set(TEST_EXECUTABLE_NAME "${EXECUTABLE_NAME}_tests")
 set(CMAKE_BUILD_TYPE Debug)
-add_executable(${EXECUTABLE_NAME} src/main.cpp)
+add_executable(${EXECUTABLE_NAME} src/main.cpp ${all_src})
 
 add_definitions(
 	-std=c++1y
@@ -14,7 +19,7 @@ include_directories (./src/)
 enable_testing()
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
-add_executable(${TEST_EXECUTABLE_NAME} tests/main.cpp)
+add_executable(${TEST_EXECUTABLE_NAME} tests/main.cpp ${all_src})
 target_link_libraries(${TEST_EXECUTABLE_NAME} ${GTEST_BOTH_LIBRARIES})
 
 target_link_libraries(${TEST_EXECUTABLE_NAME} pthread)
@@ -33,4 +38,4 @@ target_link_libraries(${EXECUTABLE_NAME} ${SFML_LIBRARIES})
 file(GLOB SOURCES src/*.cpp)
  
 # Link runTests with what we want to test and the GTest and pthread library
-target_link_libraries(${EXECUTABLE_NAME} ${GTEST_LIBRARIES} pthread)
+target_link_libraries(${EXECUTABLE_NAME} ${GTEST_MAIN_LIBRARIES} pthread)
